--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS</title>
+    <title>BasicUI</title>
     <style>
         thead,tr:nth-child(2n){background:#f6f6f6}.button,td{padding:10px 15px}.button,input{font-size:1em;display:inline-block}*{font-family:Arial,system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;outline:0;box-sizing:border-box}body{padding:25px 50px;max-width:900px;margin:auto}h1,h2,h3,h4,h5,h6{color:#212121}a{color:#373737}a:hover{color:#505050}a:active{color:#767676}.button{background:#373737;color:#fff;border:0;text-decoration:none;cursor:pointer;border-radius:5px}.button:hover{background:#505050}.button:active{background:#616161}thead{border-bottom:1px solid #d8d8d8;font-weight:700}table{border-collapse:collapse;width:100%;margin:15px auto}tr:hover{background:#e8e8e8}input{border:1px solid #cdcdcd;border-radius:5px;min-width:0;padding:10px 25px;width:100%}label{display:block}input[type=checkbox],input[type=radio]{width:unset;accent-color:#373737}
     </style>
 </head>
 <body>
-    <h1>Header</h1>
-    <button class="button">Hello World, Button</button>
-    <a class="button" href="">Hello World, Link</a>
-    <p></p>
+    <h1>BasicUI</h1>
+    <button class="button">A button</button>
+    <a class="button" href="https://github.com/fakerybakery/basicui">Button-styled Link</a>
+    <p>Input:</p>
     <input type="text" placeholder="Test">
     <p></p>
     <label>
@@ -29,7 +29,8 @@
         Button 2
     </label>
     <p></p>
-    <p>This is a <a href="">link</a> that is inline.</p>
+    <p>This is a <a href="https://github.com/fakerybakery/basicui">link</a> that is inline.</p>
+    <p>Table:</p>
     <table>
         <thead>
             <tr>
